# wincheck

./: Cargo.toml  appveyor.yml
.cargo/: config
.github/workflows/: rust.yml
src/: main.rs
