[package]
name = "wincheck"
version = "0.1.0"
authors = ["Peter Atashian <retep998@gmail.com>"]

[patch.crates-io]
winapi = { git = "https://github.com/retep998/winapi-rs.git", branch = "0.3" }

[dependencies]
alerts = "*"
all_term = "*"
ansi_term = "*"
asi_opengl = "*"
atomicwrites = "*"
atty = "*"
# audio_thread_priority = "*" # Current version fails to build
auto = "*"
autogui = "*"
autopilot = "*"
awi = "*"
backtrace = "*"
battery = "*"
bedrock = "*"
bitness = "*"
blacken = "*"
blue = "*"
bollard = "*"
bump_alloc = "*"
c-types = "*"
# cairo-sys-rs = "*" # Build scripts
capcom0 = "*"
cargo-cmd = "*"
ceviche = "*"
chiter = "*"
clicolors-control = "*"
clipboard-master = "*"
clipboard-win = "*"
clocksource = "*"
colol = "*"
com-impl = "*"
# com-wrapper = "*" # No non-suffixed release
# comedy = "*" # No non-suffixed release
# compiletest_rs = "*" # Currently broken
components = "*"
console = "*"
cpal = "*"
# cpu-affinity = "*" # Does not enable required features and is broken
cpu-monitor = "*"
cpu-time = "*"
cranelift-simplejit = "*"
crossterm_cursor = "*"
crossterm_input = "*"
crossterm_screen = "*"
crossterm_style = "*"
crossterm_utils = "*"
crossterm_winapi = "*"
crypto-hash = "*"
ctrlc = "*"
d3d12 = "*"
daemon = "*"
# datafusion-rustyline = "*" # No non-suffixed release
# dcommon = "*" # No non-suffixed release
ddc-winapi = "*"
dire = "*"
direct2d = "*"
direct3d11 = "*"
directories = "*"
directwrite = "*"
dirs = "*"
dirs-2 = "*"
dl_api = "*"
dns-lookup = "*"
dwrote = "*"
dxgi = "*"
emo = "*"
engraver = "*"
enigo = "*"
errno = "*"
executable_memory = "*"
filebuffer = "*"
filepath = "*"
# filetime_win = "*" # No non-suffixed release
find_git = "*"
flexible-locks = "*"
font-kit = "*"
font-loader = "*"
fs-swap = "*"
fs2 = "*"
# futures-glib = "*" # Build scripts
generic_game = "*"
gethostname = "*"
gfx-backend-vulkan = "*"
gfx_device_dx11 = "*"
gfx_window_dxgi = "*"
gilrs-core = "*"
glutin = "*"
# gnir = "*" # C code fails to compile
guerrilla = "*"
guess_host_triple = "*"
# guid_win = "*" # No non-suffixed release
hassle-rs = "*"
heapsize = "*"
hexchat = "*"
# hina = "*" # Uses conflicting version of ring
home = "*"
hwndloop = "*"
hyperfine = "*"
in_addr = "*"
inputbot = "*"
ipc = "*"
ipconfig = "*"
is_executable = "*"
lazy-socket = "*"
libloading = "*"
# libmaj = "*" # Uses too old version of ring
linefeed = "*"
listenfd = "*"
livesplit-hotkey = "*"
mac_address = "*"
math2d = "*"
memmap = "*"
memsec = "*"
mio-anonymous-pipes = "*"
mio-child-process = "*"
mio-named-pipes = "*"
mio-serial = "*"
miow = "*"
mortal = "*"
mscoree_sys_2 = "*"
mscorlib-safe = "*"
mscorlib-sys = "*"
msdos_time = "*"
multiinput = "*"
named_pipe = "*"
net2 = "*"
notify = "*"
ntapi = "*"
ntdll = "*"
num-format = "*"
nvapi-sys = "*"
oaidl = "*"
offscreen_gl_context = "*"
open = "*"
opener = "*"
os_pipe = "*"
os_utils = "*"
output_vt100 = "*"
palaver = "*"
parity-tokio-ipc = "*"
parking_lot_core = "*"
pcap-sys = "*"
pelite = "*"
piet-direct2d = "*"
platform-info = "*"
positioned-io-preview = "*"
proc-maps = "*"
process-memory = "*"
process_lock = "*"
proclist = "*"
pwv = "*"
py-spy = "*"
# quanta = "*" # Current version is broken
quest = "*"
rand = "*"
rand_jitter = "*"
rand_os = "*"
rapidtar = "*"
read = "*"
reflink = "*"
reg-watcher = "*"
region = "*"
# registry-pol = "*" # Current version is broken
remove_dir_all = "*"
renderdoc = "*"
ripclip = "*"
rlbot = "*"
rust-cgui = "*"
rustcap = "*"
rusty-xinput = "*"
rustyline = "*"
sandbox-ipc = "*"
scaproust = "*"
# scavenger = "*" # Uses conflicting version of clap
schannel = "*"
serialport = "*"
share_memory = "*"
shared_child = "*"
shared_memory = "*"
shiori3 = "*"
shiori_hglobal = "*"
signalbool = "*"
simple-message-box = "*"
single-instance = "*"
slice-deque = "*"
# snowchains = "*" # Enables rustls on reqwest which requires ring, also is just broken
socket2 = "*"
spin_sleep = "*"
# ssb_filter = "*" # Requires user provided library
standard_paths = "*"
subprocess = "*"
sysinfo = "*"
systemfd = "*"
systemstat = "*"
# tcp_typed = "*" # Uses old broken palaver
tempfile = "*"
term = "*"
term_cursor = "*"
terminal_size = "*"
thin_main_loop = "*"
thorium = "*"
thread-id = "*"
time = "*"
timeplot = "*"
tlhelp32 = "*"
# tls-async = "*" # No non-suffixed release
tokio-process = "*"
tokio-signal = "*"
tokio-tls = "*"
uuid = "*"
uvm_core = "*"
vibha = "*"
vmap = "*"
# vmsavedstatedump_rs = "*" # Build script failing
# vrust = "*" # Forgets to specify features
vswhere = "*"
walkdir = "*"
wallpaper-windows-user32 = "*"
webbrowser = "*"
wee_alloc = "*"
# wic = "*" # No non-suffixed release
widestring = "*"
win-opacity = "*"
winapi-util = "*"
winauth = "*"
wincolor = "*"
winconsole = "*"
windows-acl = "*"
windows-service = "*"
windows-win = "*"
windows_dpi = "*"
winhandle = "*"
winit = "*"
# winlog = "*" # Build script isn't working
# winpath = "*" # Current version is broken
winproc = "*"
winreg = "*"
winres = "*"
winrt = "*"
winrt-notification = "*"
winter = "*"
wintrap = "*"
winutil = "*"
wio = "*"
xladd = "*"
xladd-util = "*"

[target.'cfg(target_arch="i686")'.dependencies]
sbz-switch = "*" # 64-bit not supported

[target.'cfg(target_arch="x86_64")'.dependencies]
druid = "*" # 32-bit is currently broken
druid-win-shell = "*" # 32-bit is currently broken
hcs-rs = "*" # Depends on winutils-rs
may = "*" # 32-bit not supported
varlink = "*" # 32-bit is currently broken
virtdisk-rs = "*" # Depends on winutils-rs
wasmer-clif-backend = "*" # Depends on wasmer-win-exception-handler
wasmer-runtime-core = "*" # Broken on 32-bit
wasmer-win-exception-handler = "*" # 32-bit does not work
winutils-rs = "*" # 32-bit is currently broken

[target.'cfg(target_env="msvc")'.dependencies]
c-ares = "*" # Build scripts
c-ares-resolver = "*" # Build scripts
c-ares-sys = "*" # Build scripts
cargo = "*" # Build scripts
cargo-semverver = "*" # What even
curl = "*" # Build scripts
curl-sys = "*" # Build scripts
ffizer = "*" # Depends on bzip2-sys
gfx-backend-dx11 = "*" # Depends on spirv_cross
gfx-backend-dx12 = "*" # Depends on spirv_cross
git-find = "*" # Build scripts
guid-create = "*" # Pulls in ancient version of backtrace that insists on backtrace-sys
http-serve = "*" # Depends on miniz-sys
log4rs = "*" # Build scripts
mysql = "*" # Not my fault
nuklear-backend-gdi = "*" # Depends on nuklear-sys
ring = "*" # Build scripts
sccache = "*" # Depends on ring
stacker = "*" # Build scripts
tokio-curl = "*" # Build scripts
wallpaper = "*" # Depends on reqwest
