[package]
name = "wincheck"
version = "0.1.0"
authors = ["Peter Atashian <retep998@gmail.com>"]

[patch.crates-io]
winapi = { git = "https://github.com/retep998/winapi-rs.git", branch = "0.3" }

[dependencies]
aesm-client = "*"
alerts = "*"
all_term = "*"
ansi_term = "*"
arenavec = "*"
# ari = "*" # ring
asi_opengl = "*"
async-timer = "*"
atomicwrites = "*"
atty = "*"
audio_thread_priority = "*"
authenticator = "*"
auto = "*"
autogui = "*"
autopilot = "*"
awi = "*"
battery = "*"
bedrock = "*"
bitness = "*"
blacken = "*"
blasoxide-cpuinfo = "*"
blue = "*"
bollard = "*"
bump_alloc = "*"
c-types = "*"
# cairo-sys-rs = "*" # Build scripts
capcom0 = "*"
cargo-cmd = "*"
ceviche = "*"
cfile = "*"
cgc = "*"
chiter = "*"
clipboard-master = "*"
clipboard-win = "*"
clocksource = "*"
colol = "*"
com-impl = "*"
# com-wrapper = "*" # No non-suffixed release
# comedy = "*" # No non-suffixed release
# compiletest_rs = "*" # Currently broken
com_ptr = "*"
components = "*"
console = "*"
constellation-internal = "*"
constellation-rs = "*"
cpal = "*"
# cpu-affinity = "*" # Does not enable required features and is broken
cpu-monitor = "*"
cpu-time = "*"
cranelift-simplejit = "*"
crossterm_cursor = "*"
crossterm_input = "*"
crossterm_screen = "*"
crossterm_style = "*"
crossterm_utils = "*"
crossterm_winapi = "*"
crypto-hash = "*"
ctrlc = "*"
d3d12 = "*"
daemon = "*"
# datafusion-rustyline = "*" # No non-suffixed release
# dcommon = "*" # No non-suffixed release
ddc-winapi = "*"
debug-here = "*"
detour = "*"
detours-sys = "*"
dhc = "*"
dire = "*"
direct2d = "*"
direct3d11 = "*"
directwrite = "*"
dirs-2 = "*"
dirs-sys = "*"
dirstat-rs = "*"
dl_api = "*"
dns-lookup = "*"
dntk = "*"
dwrote = "*"
dxgi = "*"
efivar = "*"
elba = "*"
emo = "*"
engraver = "*"
enigo = "*"
errno = "*"
executable_memory = "*"
fd-lock = "*"
fenestroj = "*"
filebuffer = "*"
filedescriptor = "*"
filename = "*"
filepath = "*"
filesize = "*"
filetime = "*"
filetime_win = "*"
find_git = "*"
# flakebi-ring = "*" # ring
flexible-locks = "*"
font-kit = "*"
font-loader = "*"
fs-swap = "*"
fs2 = "*"
# futures-glib = "*" # Build scripts
generator = "*"
generic_game = "*"
gethostname = "*"
# gettid = "*" # Uses unstable feature without feature flags
gfx-backend-gl = "*"
gfx-backend-vulkan = "*"
gfx_device_dx11 = "*"
gfx_window_dxgi = "*"
gilrs-core = "*"
glutin = "*"
glutin_egl_sys = "*"
# gnir = "*" # C code fails to compile
guerrilla = "*"
guess_host_triple = "*"
guid_win = "*"
hassle-rs = "*"
heapsize = "*"
heim-common = "*"
heim-cpu = "*"
heim-disk = "*"
heim-host = "*"
heim-memory = "*"
heim-process = "*"
hexchat = "*"
# hina = "*" # Uses conflicting version of ring
home = "*"
hwndloop = "*"
hyper-staticfile = "*"
hyperfine = "*"
imgui-dx9-renderer = "*"
imgui-gfx-renderer = "*"
in_addr = "*"
inputbot = "*"
io_bluetooth = "*"
ipc = "*"
ipconfig = "*"
is_elevated = "*"
is_executable = "*"
junction = "*"
keystroke = "*"
lazy-socket = "*"
libloading = "*"
# libmaj = "*" # Uses too old version of ring
librapidarchive = "*"
linefeed = "*"
listenfd = "*"
livesplit-hotkey = "*"
locale_config = "*"
loggest = "*"
lsd = "*"
mac_address = "*"
math2d = "*"
memmap = "*"
memsec = "*"
minifb = "*"
mio-anonymous-pipes = "*"
mio-child-process = "*"
mio-named-pipes = "*"
mio-serial = "*"
miow = "*"
mortal = "*"
mscoree_sys_2 = "*"
mscorlib-safe = "*"
mscorlib-sys = "*"
msdos_time = "*"
multiinput = "*"
named_pipe = "*"
net2 = "*"
notifier = "*"
notify = "*"
ntapi = "*"
ntdll = "*"
num-format = "*"
nvapi-sys = "*"
oaidl = "*"
offscreen_gl_context = "*"
open = "*"
opener = "*"
openxr = "*"
openxr-sys = "*"
os_pipe = "*"
os_utils = "*"
output_vt100 = "*"
palaver = "*"
parity-tokio-ipc = "*"
parity-util-mem = "*"
parking_lot_core = "*"
pcap-sys = "*"
pelite = "*"
piet-direct2d = "*"
platform-info = "*"
portable-pty = "*"
positioned-io-preview = "*"
proc-maps = "*"
process-memory = "*"
process_lock = "*"
proclist = "*"
procs = "*"
proctitle = "*"
pwv = "*"
py-spy = "*"
# quanta = "*" # Current version is broken
quest = "*"
rand_jitter = "*"
rapidtar = "*"
rawkey = "*"
read = "*"
reflink = "*"
reg-watcher = "*"
region = "*"
# registry-pol = "*" # Current version is broken
remoteprocess = "*"
remove_dir_all = "*"
renderdoc = "*"
ripclip = "*"
rlbot = "*"
rpassword = "*"
rust-cgui = "*"
rustcap = "*"
rusty-xinput = "*"
rustyline = "*"
s-tokio-ipc = "*"
sandbox-ipc = "*"
scaproust = "*"
# scavenger = "*" # Uses conflicting version of clap
# sccache = "*" # Depends on ring
schannel = "*"
serialport = "*"
sgxs-loaders = "*"
share_memory = "*"
shared_child = "*"
shared_memory = "*"
shh = "*"
shiori3 = "*"
shiori_hglobal = "*"
signalbool = "*"
simple-message-box = "*"
single-instance = "*"
siquery = "*"
slice-deque = "*"
# snowchains = "*" # Enables rustls on reqwest which requires ring, also is just broken
socket2 = "*"
spectrometer = "*"
spin_sleep = "*"
# ssb_filter = "*" # Requires user provided library
standard_paths = "*"
subprocess = "*"
susy-tokio-ipc = "*"
sysinfo = "*"
systemfd = "*"
systemstat = "*"
tantivy = "*"
# tcp_typed = "*" # Uses old broken palaver
tempfile = "*"
# tentacle = "*" # ring
term = "*"
term_cursor = "*"
termimage = "*"
terminal_size = "*"
termwiz = "*"
thin_main_loop = "*"
thread-id = "*"
time = "*"
timekeeper = "*"
timeplot = "*"
tlhelp32 = "*"
# tls-async = "*" # No non-suffixed release
tokio-process = "*"
tokio-signal = "*"
tokio-tls = "*"
topgrade = "*"
trash = "*"
uuid = "*"
uvm_core = "*"
vibha = "*"
vmap = "*"
# vmsavedstatedump_rs = "*" # Build script failing
# vrust = "*" # Forgets to specify features
vswhere = "*"
walkdir = "*"
wallpaper-windows-user32 = "*"
wallpapers = "*"
wasmer-clif-fork-simplejit = "*"
wasmer-wasi = "*"
webbrowser = "*"
wee_alloc = "*"
wexit = "*"
# wic = "*" # No non-suffixed release
widestring = "*"
win-opacity = "*"
winapi-util = "*"
winauth = "*"
winbluetooth = "*"
wincolor = "*"
winconsole = "*"
windows-acl = "*"
windows-permissions = "*"
windows-service = "*"
windows-win = "*"
windows_dpi = "*"
winhandle = "*"
winit = "*"
# winlog = "*" # Build script isn't working
# winpath = "*" # Current version is broken
winproc = "*"
winreg = "*"
winres = "*"
winrt = "*"
winrt-notification = "*"
winter = "*"
wintrap = "*"
winutil = "*"
winutils-rs = "*"
wio = "*"
wmi = "*"
xladd = "*"
xladd-util = "*"

[target.'cfg(target_arch="i686")'.dependencies]
sbz-switch = "*" # 64-bit not supported

[target.'cfg(target_arch="x86_64")'.dependencies]
druid = "*" # 32-bit is currently broken
druid-win-shell = "*" # 32-bit is currently broken
hcs-rs = "*" # Depends on winutils-rs
may = "*" # 32-bit not supported
varlink = "*" # 32-bit is currently broken
virtdisk-rs = "*" # Depends on winutils-rs
wasmer-clif-backend = "*" # Depends on wasmer-win-exception-handler
wasmer-runtime-core = "*" # Broken on 32-bit
wasmer-win-exception-handler = "*" # 32-bit does not work

[target.'cfg(target_env="msvc")'.dependencies]
backtrace = "*" # Build scripts
c-ares = "*" # Build scripts
c-ares-resolver = "*" # Build scripts
c-ares-sys = "*" # Build scripts
cargo = "*" # Build scripts
cargo-semverver = "*" # What even
curl = "*" # Build scripts
curl-sys = "*" # Build scripts
ffizer = "*" # Depends on bzip2-sys
gfx-backend-dx11 = "*" # Depends on spirv_cross
gfx-backend-dx12 = "*" # Depends on spirv_cross
git-find = "*" # Build scripts
guid-create = "*" # Pulls in ancient version of backtrace that insists on backtrace-sys
http-serve = "*" # Depends on miniz-sys
log4rs = "*" # Build scripts
mysql = "*" # Not my fault
nuklear-backend-gdi = "*" # Depends on nuklear-sys
ring = "*" # Build scripts
solana-install = "*" # Depends on clear_on_drop
stacker = "*" # Build scripts
tokio-curl = "*" # Build scripts
wallpaper = "*" # Depends on reqwest
