[package]
name = "wincheck"
version = "0.1.0"
authors = ["Peter Atashian <retep998@gmail.com>"]

[patch.crates-io]
winapi = { git = "https://github.com/retep998/winapi-rs.git", branch = "0.3" }

[dependencies]
# aesm-client = "*" # Depends on protoc binary
alerts = "*"
all_term = "*"
ansi_term = "*"
arenavec = "*"
# ari = "*" # ring
asi_opengl = "*"
async-timer = "*"
atomicwrites = "*"
atty = "*"
audio_thread_priority = "*"
authenticator = "*"
auto = "*"
autogui = "*"
autopilot = "*"
awi = "*"
backtrace = "*"
battery = "*"
bedrock = "*"
bitness = "*"
blacken = "*"
blasoxide-cpuinfo = "*"
blue = "*"
bollard = "*"
bump_alloc = "*"
c-ares = "*"
c-ares-resolver = "*"
c-ares-sys = "*"
c-types = "*"
# cairo-sys-rs = "*" # Build scripts
capcom0 = "*"
cargo = "*"
cargo-cmd = "*"
cargo-semverver = "*"
ceviche = "*"
cfile = "*"
cgc = "*"
chiter = "*"
clipboard-master = "*"
clipboard-win = "*"
clocksource = "*"
colol = "*"
com-impl = "*"
# com-wrapper = "*" # No non-suffixed release
# comedy = "*" # No non-suffixed release
# compiletest_rs = "*" # Currently broken
com_ptr = "*"
components = "*"
console = "*"
# constellation-internal = "*" # Broken on Windows
# constellation-rs = "*" # Depends on tcp_typed
cpal = "*"
# cpu-affinity = "*" # Does not enable required features and is broken
cpu-monitor = "*"
cpu-time = "*"
cranelift-simplejit = "*"
crossterm_cursor = "*"
crossterm_input = "*"
crossterm_screen = "*"
crossterm_style = "*"
crossterm_utils = "*"
crossterm_winapi = "*"
crypto-hash = "*"
ctrlc = "*"
curl-sys = "*"
d3d12 = "*"
daemon = "*"
# datafusion-rustyline = "*" # No non-suffixed release
# dcommon = "*" # No non-suffixed release
ddc-winapi = "*"
debug-here = "*"
detour = "*"
detours-sys = "*"
dhc = "*"
dire = "*"
direct2d = "*"
direct3d11 = "*"
directwrite = "*"
dirs-2 = "*"
dirs-sys = "*"
dirstat-rs = "*"
dl_api = "*"
dns-lookup = "*"
dntk = "*"
# druid = "*"
# druid-win-shell = "*"
duplicate-finder = "*"
dwrote = "*"
dxgi = "*"
efivar = "*"
elba = "*"
emo = "*"
engraver = "*"
enigo = "*"
errno = "*"
executable_memory = "*"
# fd-lock = "*" # Currently fails to build
fenestroj = "*"
ffizer = "*"
filebuffer = "*"
filedescriptor = "*"
filename = "*"
filepath = "*"
filesize = "*"
filetime = "*"
filetime_win = "*"
find_git = "*"
# flakebi-ring = "*" # ring
flexible-locks = "*"
font-kit = "*"
font-loader = "*"
fs-swap = "*"
fs2 = "*"
# futures-glib = "*" # Build scripts
# generator = "*"
generic_game = "*"
gethostname = "*"
# gettid = "*" # Uses unstable feature without feature flags
gfx-backend-dx11 = "*"
gfx-backend-dx12 = "*"
gfx-backend-gl = "*"
gfx-backend-vulkan = "*"
# gfx_device_dx11 = "*" # Currently broken
# gfx_window_dxgi = "*" # Depends on gfx_device_dx11
gilrs-core = "*"
git-find = "*"
glutin = "*"
glutin_egl_sys = "*"
# gnir = "*" # C code fails to compile
guerrilla = "*"
guess_host_triple = "*"
guid-create = "*"
guid_win = "*"
hassle-rs = "*"
# hcs-rs = "*"
heapsize = "*"
heim-common = "*"
heim-cpu = "*"
heim-disk = "*"
heim-host = "*"
heim-memory = "*"
heim-process = "*"
# hexchat = "*" # Broken
# hina = "*" # Uses conflicting version of ring
home = "*"
http-serve = "*"
hwndloop = "*"
hyper-staticfile = "*"
hyperfine = "*"
imgui-dx9-renderer = "*"
imgui-gfx-renderer = "*"
in_addr = "*"
inputbot = "*"
io_bluetooth = "*"
ipc = "*"
ipconfig = "*"
is_elevated = "*"
is_executable = "*"
junction = "*"
lazy-socket = "*"
libloading = "*"
# libmaj = "*" # Uses too old version of ring
librapidarchive = "*"
linefeed = "*"
listenfd = "*"
livesplit-hotkey = "*"
locale_config = "*"
log4rs = "*"
loggest = "*"
lsd = "*"
mac_address = "*"
math2d = "*"
# may = "*"
memmap = "*"
memsec = "*"
minifb = "*"
mio-anonymous-pipes = "*"
mio-child-process = "*"
mio-named-pipes = "*"
mio-serial = "*"
miow = "*"
mortal = "*"
mscoree_sys_2 = "*"
mscorlib-safe = "*"
mscorlib-sys = "*"
msdos_time = "*"
multiinput = "*"
mysql = "*"
named_pipe = "*"
net2 = "*"
# notifier = "*" # Currently broken
notify = "*"
ntapi = "*"
ntdll = "*"
nuklear-backend-gdi = "*"
num-format = "*"
nvapi-sys = "*"
oaidl = "*"
offscreen_gl_context = "*"
open = "*"
opener = "*"
openxr = "*"
openxr-sys = "*"
os_pipe = "*"
os_utils = "*"
# osclientcerts = "*" # Depends on clang installation
output_vt100 = "*"
palaver = "*"
parity-tokio-ipc = "*"
parity-util-mem = "*"
parking_lot_core = "*"
pcap-sys = "*"
pelite = "*"
piet-direct2d = "*"
platform-info = "*"
portable-pty = "*"
positioned-io-preview = "*"
proc-maps = "*"
process-memory = "*"
process_lock = "*"
proclist = "*"
procs = "*"
proctitle = "*"
pwv = "*"
# py-spy = "*"
# quanta = "*" # Current version is broken
quest = "*"
rand_jitter = "*"
rapidtar = "*"
rawkey = "*"
read = "*"
reflink = "*"
reg-watcher = "*"
region = "*"
# registry-pol = "*" # Current version is broken
# remoteprocess = "*"
remove_dir_all = "*"
# renderdoc = "*" # Current version is broken
ring = "*"
ripclip = "*"
rlbot = "*"
rpassword = "*"
rust-cgui = "*"
rustcap = "*"
rusty-xinput = "*"
rustyline = "*"
s-tokio-ipc = "*"
sandbox-ipc = "*"
# sbz-switch = "*"
scaproust = "*"
# scavenger = "*" # Uses conflicting version of clap
# sccache = "*" # Depends on ring
schannel = "*"
serialport = "*"
sgxs-loaders = "*"
share_memory = "*"
shared_child = "*"
shared_memory = "*"
shh = "*"
shiori3 = "*"
shiori_hglobal = "*"
signalbool = "*"
simple-message-box = "*"
single-instance = "*"
siquery = "*"
slice-deque = "*"
# snowchains = "*" # Enables rustls on reqwest which requires ring, also is just broken
socket2 = "*"
solana-install = "*"
spectrometer = "*"
spin_sleep = "*"
# ssb_filter = "*" # Requires user provided library
stacker = "*"
standard_paths = "*"
subprocess = "*"
susy-tokio-ipc = "*"
sysinfo = "*"
systemfd = "*"
systemstat = "*"
tantivy = "*"
# tcp_typed = "*" # Does not support windows currently
tempfile = "*"
# tentacle = "*" # ring
term = "*"
term_cursor = "*"
termimage = "*"
terminal_size = "*"
termwiz = "*"
thin_main_loop = "*"
thread-id = "*"
time = "*"
timekeeper = "*"
timeplot = "*"
tlhelp32 = "*"
# tls-async = "*" # No non-suffixed release
tokio-curl = "*"
tokio-process = "*"
tokio-signal = "*"
tokio-tls = "*"
topgrade = "*"
trash = "*"
uuid = "*"
uvm_core = "*"
# varlink = "*"
vibha = "*"
# virtdisk-rs = "*"
vmap = "*"
# vmsavedstatedump_rs = "*" # Build script failing
# vrust = "*" # Forgets to specify features
vswhere = "*"
walkdir = "*"
wallpaper = "*"
wallpaper-windows-user32 = "*"
wallpapers = "*"
# wasmer-clif-backend = "*"
wasmer-clif-fork-simplejit = "*"
# wasmer-runtime-core = "*"
# wasmer-wasi = "*"
# wasmer-win-exception-handler = "*"
webbrowser = "*"
wee_alloc = "*"
wexit = "*"
# wic = "*" # No non-suffixed release
widestring = "*"
win-opacity = "*"
winapi-util = "*"
winauth = "*"
winbluetooth = "*"
wincolor = "*"
winconsole = "*"
windows-acl = "*"
windows-permissions = "*"
windows-service = "*"
windows-win = "*"
windows_dpi = "*"
winhandle = "*"
winit = "*"
# winlog = "*" # Build script isn't working
# winpath = "*" # Current version is broken
winproc = "*"
winreg = "*"
winres = "*"
winrt = "*"
winrt-notification = "*"
winter = "*"
wintrap = "*"
winutil = "*"
winutils-rs = "*"
wio = "*"
wmi = "*"
xladd = "*"
xladd-util = "*"

[target.'cfg(target_arch="i686")'.dependencies]
sbz-switch = "*" # 64-bit not supported

[target.'cfg(target_arch="x86_64")'.dependencies]
druid = "*" # 32-bit is currently broken
druid-win-shell = "*" # 32-bit is currently broken
generator = "*" # Only supports 64-bit
hcs-rs = "*" # Depends on old winutils-rs
may = "*" # 32-bit not supported
py-spy = "*" # Depends on remoteprocess
remoteprocess = "*" # 32-bit not supported
varlink = "*" # 32-bit is currently broken
virtdisk-rs = "*" # Depends on old winutils-rs
wasmer-clif-backend = "*" # Depends on wasmer-win-exception-handler
wasmer-runtime-core = "*" # Broken on 32-bit
wasmer-wasi = "*" # Depends on wasmer-runtime-core
wasmer-win-exception-handler = "*" # 32-bit does not work
